Add test for classpath URL query string parsing and fix by using url instaed of uri so that we get the correct query string